# wikisoup

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
backend/: entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml
backend/scrapper/: views.py
backend/scrapper/services/: scrap_service.py
backend/wikisoup/: asgi.py  settings.py  wsgi.py
docker/backend/: .env  .env.example  Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/webserver/: Dockerfile  nginx.conf
frontend/: index.html  script.js  styles.css
scrapper/: models.py  serializers.py
scrapper/services/: __init__.py  scrap_service.py
static/: index.html  script.js  styles.css
wikisoup/: settings.py  urls.py
